expanded the pandas

--- a/exercises-solutions.ipynb
+++ b/exercises-solutions.ipynb
@@ -927,13 +927,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 86,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tag</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Drama</td>\n",
+       "      <td>5339</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>3703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Thriller</td>\n",
+       "      <td>1706</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Romance</td>\n",
+       "      <td>1685</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Action</td>\n",
+       "      <td>1473</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Crime</td>\n",
+       "      <td>1118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Adventure</td>\n",
+       "      <td>1025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Horror</td>\n",
+       "      <td>1013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Sci-Fi</td>\n",
+       "      <td>754</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Fantasy</td>\n",
+       "      <td>543</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         tag  count\n",
+       "0      Drama   5339\n",
+       "1     Comedy   3703\n",
+       "2   Thriller   1706\n",
+       "3    Romance   1685\n",
+       "4     Action   1473\n",
+       "5      Crime   1118\n",
+       "6  Adventure   1025\n",
+       "7     Horror   1013\n",
+       "8     Sci-Fi    754\n",
+       "9    Fantasy    543"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "tags = top_tags.toPandas()"
+    "tags = top_tags.toPandas()\n",
+    "tags"
    ]
   },
   {
