elaborated on the problem

--- a/exercises-problems.ipynb
+++ b/exercises-problems.ipynb
@@ -452,7 +452,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pandas and Plotting"
+    "# Pandas and Plotting\n",
+    "\n",
+    "One of the benefits of working with Python is that you have access to another excellent data manipulation library, Pandas, and a plotting library, matplotlib.  To tell our notebook we want to be able to display plots inline, we do the following:"
    ]
   },
   {
@@ -472,7 +474,7 @@
     "collapsed": true
    },
    "source": [
-    "I want to see which tags are used the most, as a bar graph.  Fortunately, Pandas and Matplotlib make this straightforward.  Any DataFrame can be exported as a Pandas DataFrame using `toPandas()`.  Pandas has a convenient call, `plot()` to display charts.\n",
+    "I want to see which tags are used the most, globally, as a bar graph.  Fortunately, Pandas and Matplotlib make this straightforward.  Any DataFrame can be exported as a Pandas DataFrame using `toPandas()`.  Pandas has a convenient call, `plot()` to display charts via matplotlib.\n",
     "\n",
     "For example:\n",
     "```\n",
@@ -481,7 +483,9 @@
     "```\n",
     "http://pandas.pydata.org/pandas-docs/stable/visualization.html\n",
     "\n",
-    "Note the `set_index()` call - you'll want it to make sure you have the correct label.  See http://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.set_index.html"
+    "Note the `set_index()` call - you'll want it to make sure you have the correct label.  See http://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.set_index.html\n",
+    "\n",
+    "Use what you've learned today to count the number of instances of each tag, then visualize it."
    ]
   },
   {
