steaming boiler plate

--- a/exercises-solutions.ipynb
+++ b/exercises-solutions.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -1145,6 +1145,80 @@
    "source": [
     "tags.set_index(\"tag\").plot(kind='bar')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Streaming"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import Row\n",
+    "data = [Row(movie_id=329, rating=4, timestamp=1436566541, user_id=53974), Row(movie_id=324, rating=3, timestamp=1436566541, user_id=4324), Row(movie_id=926, rating=2, timestamp=1436566541, user_id=101), Row(movie_id=709, rating=3, timestamp=1436566541, user_id=7192), Row(movie_id=580, rating=4, timestamp=1436566541, user_id=2538), Row(movie_id=250, rating=5, timestamp=1436566541, user_id=2678), Row(movie_id=311, rating=1, timestamp=1436566541, user_id=1438), Row(movie_id=856, rating=4, timestamp=1436566541, user_id=6376), Row(movie_id=954, rating=3, timestamp=1436566541, user_id=1282), Row(movie_id=20, rating=2, timestamp=1436566541, user_id=4412)]\n",
+    "\n",
+    "df = sql.createDataFrame(data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import functions as F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(movie_id=250, AVG(rating)=5.0, COUNT(rating)=1),\n",
+       " Row(movie_id=856, AVG(rating)=4.0, COUNT(rating)=1),\n",
+       " Row(movie_id=709, AVG(rating)=3.0, COUNT(rating)=1),\n",
+       " Row(movie_id=311, AVG(rating)=1.0, COUNT(rating)=1),\n",
+       " Row(movie_id=324, AVG(rating)=3.0, COUNT(rating)=1),\n",
+       " Row(movie_id=926, AVG(rating)=2.0, COUNT(rating)=1),\n",
+       " Row(movie_id=329, AVG(rating)=4.0, COUNT(rating)=1),\n",
+       " Row(movie_id=954, AVG(rating)=3.0, COUNT(rating)=1),\n",
+       " Row(movie_id=580, AVG(rating)=4.0, COUNT(rating)=1),\n",
+       " Row(movie_id=20, AVG(rating)=2.0, COUNT(rating)=1)]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupBy(\"movie_id\").agg(F.avg(df.rating), F.count(df.rating)).collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
