--- a/exercises-solutions.ipynb
+++ b/exercises-solutions.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -71,11 +71,11 @@
     {
      "data": {
       "text/plain": [
-       "[Row(user_id=1, age=34, favorite_foods=[u'Bacon', u'Cheese'], name=u'Jon'),\n",
+       "[Row(user_id=5, age=10, favorite_foods=[u'Anger'], name=u'Larry'),\n",
+       " Row(user_id=1, age=34, favorite_foods=[u'Bacon', u'Cheese'], name=u'Jon'),\n",
        " Row(user_id=2, age=22, favorite_foods=[u'Kale', u'Pizza', u'Wine'], name=u'Dani'),\n",
        " Row(user_id=4, age=1, favorite_foods=[u'Candy', u'Fear'], name=u'Baby Luke'),\n",
-       " Row(user_id=3, age=108, favorite_foods=[u'Muffins', u'Pie', u'Steak'], name=u'Patrick'),\n",
-       " Row(user_id=5, age=10, favorite_foods=[u'Anger'], name=u'Larry')]"
+       " Row(user_id=3, age=108, favorite_foods=[u'Muffins', u'Pie', u'Steak'], name=u'Patrick')]"
       ]
      },
      "execution_count": 3,
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -119,7 +119,7 @@
        "[Row(user_id=1, age=34, favorite_foods=[u'Bacon', u'Cheese'], name=u'Jon')]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -196,8 +196,8 @@
       "+-------+---+--------------------+-----+\n",
       "|user_id|age|      favorite_foods| name|\n",
       "+-------+---+--------------------+-----+\n",
-      "|      1| 34|ArrayBuffer(Bacon...|  Jon|\n",
       "|      5| 10|  ArrayBuffer(Anger)|Larry|\n",
+      "|      1| 34|ArrayBuffer(Bacon...|  Jon|\n",
       "+-------+---+--------------------+-----+\n",
       "\n"
      ]
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -447,7 +447,7 @@
        " Row(movie_id=u'10', name=u'GoldenEye (1995)', tags=[u'Action', u'Adventure', u'Thriller'])]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -1157,16 +1157,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "549588d9-29de-11e5-9252-3c15c2c26c1e\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql import Row\n",
+    "ts = str(uuid1())\n",
+    "print ts\n",
+    "data = [Row(movie_id=329, rating=4, user_id=53974, ts=ts), \n",
+    "        Row(movie_id=329, rating=3, user_id=4324, ts=ts), \n",
+    "        Row(movie_id=329, rating=2, user_id=101, ts=ts), \n",
+    "        Row(movie_id=329, rating=3, user_id=7192, ts=ts), \n",
+    "        Row(movie_id=580, rating=4, user_id=2538, ts=ts), \n",
+    "        Row(movie_id=250, rating=5, user_id=2678, ts=ts), \n",
+    "        Row(movie_id=311, rating=1, user_id=1438, ts=ts), \n",
+    "        Row(movie_id=856, rating=4, user_id=6376, ts=ts), \n",
+    "        Row(movie_id=954, rating=3, user_id=1282, ts=ts), \n",
+    "        Row(movie_id=20, rating=2, user_id=4412, ts=ts)]\n",
+    "\n",
+    "df = sql.createDataFrame(data)\n",
+    "df.registerTempTable(\"ratings\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from pyspark.sql import Row\n",
-    "data = [Row(movie_id=329, rating=4, timestamp=1436566541, user_id=53974), Row(movie_id=324, rating=3, timestamp=1436566541, user_id=4324), Row(movie_id=926, rating=2, timestamp=1436566541, user_id=101), Row(movie_id=709, rating=3, timestamp=1436566541, user_id=7192), Row(movie_id=580, rating=4, timestamp=1436566541, user_id=2538), Row(movie_id=250, rating=5, timestamp=1436566541, user_id=2678), Row(movie_id=311, rating=1, timestamp=1436566541, user_id=1438), Row(movie_id=856, rating=4, timestamp=1436566541, user_id=6376), Row(movie_id=954, rating=3, timestamp=1436566541, user_id=1282), Row(movie_id=20, rating=2, timestamp=1436566541, user_id=4412)]\n",
-    "\n",
-    "df = sql.createDataFrame(data)\n"
+    "movie_to_ts = sql.sql(\"select distinct movie_id, ts from ratings\")\n",
+    "movie_to_ts.registerTempTable(\"movie_ts\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(movie_id=329, ts=u'549588d9-29de-11e5-9252-3c15c2c26c1e'),\n",
+       " Row(movie_id=250, ts=u'549588d9-29de-11e5-9252-3c15c2c26c1e'),\n",
+       " Row(movie_id=580, ts=u'549588d9-29de-11e5-9252-3c15c2c26c1e'),\n",
+       " Row(movie_id=856, ts=u'549588d9-29de-11e5-9252-3c15c2c26c1e'),\n",
+       " Row(movie_id=954, ts=u'549588d9-29de-11e5-9252-3c15c2c26c1e'),\n",
+       " Row(movie_id=311, ts=u'549588d9-29de-11e5-9252-3c15c2c26c1e'),\n",
+       " Row(movie_id=20, ts=u'549588d9-29de-11e5-9252-3c15c2c26c1e')]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_to_ts.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "agg = sql.sql(\"SELECT movie_id, avg(rating) as a, count(rating) as c from ratings group by movie_id\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "agg.registerTempTable(\"movie_aggregates\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(movie_id=250, c1=5.0, c2=1),\n",
+       " Row(movie_id=856, c1=4.0, c2=1),\n",
+       " Row(movie_id=311, c1=1.0, c2=1),\n",
+       " Row(movie_id=329, c1=3.0, c2=4),\n",
+       " Row(movie_id=954, c1=3.0, c2=1),\n",
+       " Row(movie_id=580, c1=4.0, c2=1),\n",
+       " Row(movie_id=20, c1=2.0, c2=1)]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agg.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(movie_id=250, a=5.0, c=1, ts=u'549588d9-29de-11e5-9252-3c15c2c26c1e'),\n",
+       " Row(movie_id=856, a=4.0, c=1, ts=u'549588d9-29de-11e5-9252-3c15c2c26c1e'),\n",
+       " Row(movie_id=311, a=1.0, c=1, ts=u'549588d9-29de-11e5-9252-3c15c2c26c1e'),\n",
+       " Row(movie_id=329, a=3.0, c=4, ts=u'549588d9-29de-11e5-9252-3c15c2c26c1e'),\n",
+       " Row(movie_id=954, a=3.0, c=1, ts=u'549588d9-29de-11e5-9252-3c15c2c26c1e'),\n",
+       " Row(movie_id=580, a=4.0, c=1, ts=u'549588d9-29de-11e5-9252-3c15c2c26c1e'),\n",
+       " Row(movie_id=20, a=2.0, c=1, ts=u'549588d9-29de-11e5-9252-3c15c2c26c1e')]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sql.sql(\"select a.movie_id, a.a, a.c, b.ts as ts from movie_aggregates a join movie_ts b on a.movie_id = b.movie_id  \").collect()"
    ]
   },
   {
@@ -1178,6 +1316,35 @@
    "outputs": [],
    "source": [
     "from pyspark.sql import functions as F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "Py4JJavaError",
+     "evalue": "An error occurred while calling o473.fill.\n: org.apache.spark.sql.AnalysisException: Cannot resolve column name \"timestamp\" among (movie_id, rating, user_id);\n\tat org.apache.spark.sql.DataFrame$$anonfun$resolve$1.apply(DataFrame.scala:159)\n\tat org.apache.spark.sql.DataFrame$$anonfun$resolve$1.apply(DataFrame.scala:159)\n\tat scala.Option.getOrElse(Option.scala:120)\n\tat org.apache.spark.sql.DataFrame.resolve(DataFrame.scala:158)\n\tat org.apache.spark.sql.DataFrameNaFunctions$$anonfun$fill0$1.apply(DataFrameNaFunctions.scala:364)\n\tat org.apache.spark.sql.DataFrameNaFunctions$$anonfun$fill0$1.apply(DataFrameNaFunctions.scala:362)\n\tat scala.collection.mutable.ResizableArray$class.foreach(ResizableArray.scala:59)\n\tat scala.collection.mutable.ArrayBuffer.foreach(ArrayBuffer.scala:47)\n\tat org.apache.spark.sql.DataFrameNaFunctions.fill0(DataFrameNaFunctions.scala:362)\n\tat org.apache.spark.sql.DataFrameNaFunctions.fill(DataFrameNaFunctions.scala:210)\n\tat sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)\n\tat sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)\n\tat sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)\n\tat java.lang.reflect.Method.invoke(Method.java:497)\n\tat py4j.reflection.MethodInvoker.invoke(MethodInvoker.java:231)\n\tat py4j.reflection.ReflectionEngine.invoke(ReflectionEngine.java:379)\n\tat py4j.Gateway.invoke(Gateway.java:259)\n\tat py4j.commands.AbstractCommand.invokeMethod(AbstractCommand.java:133)\n\tat py4j.commands.CallCommand.execute(CallCommand.java:79)\n\tat py4j.GatewayConnection.run(GatewayConnection.java:207)\n\tat java.lang.Thread.run(Thread.java:745)\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mPy4JJavaError\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-35-53bc4a75cc0c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0muuid\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0muuid1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfillna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m\"timestamp\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muuid1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcollect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/usr/local/spark-1.4.0-bin-cdh4/python/pyspark/sql/dataframe.pyc\u001b[0m in \u001b[0;36mfillna\u001b[0;34m(self, value, subset)\u001b[0m\n\u001b[1;32m   1017\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1018\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1019\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfill\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msql_ctx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1020\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0msubset\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1021\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfill\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msql_ctx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/spark-1.4.0-bin-cdh4/python/lib/py4j-0.8.2.1-src.zip/py4j/java_gateway.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m    536\u001b[0m         \u001b[0manswer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgateway_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend_command\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommand\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    537\u001b[0m         return_value = get_return_value(answer, self.gateway_client,\n\u001b[0;32m--> 538\u001b[0;31m                 self.target_id, self.name)\n\u001b[0m\u001b[1;32m    539\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    540\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mtemp_arg\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtemp_args\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/spark-1.4.0-bin-cdh4/python/lib/py4j-0.8.2.1-src.zip/py4j/protocol.py\u001b[0m in \u001b[0;36mget_return_value\u001b[0;34m(answer, gateway_client, target_id, name)\u001b[0m\n\u001b[1;32m    298\u001b[0m                 raise Py4JJavaError(\n\u001b[1;32m    299\u001b[0m                     \u001b[0;34m'An error occurred while calling {0}{1}{2}.\\n'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 300\u001b[0;31m                     format(target_id, '.', name), value)\n\u001b[0m\u001b[1;32m    301\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    302\u001b[0m                 raise Py4JError(\n",
+      "\u001b[0;31mPy4JJavaError\u001b[0m: An error occurred while calling o473.fill.\n: org.apache.spark.sql.AnalysisException: Cannot resolve column name \"timestamp\" among (movie_id, rating, user_id);\n\tat org.apache.spark.sql.DataFrame$$anonfun$resolve$1.apply(DataFrame.scala:159)\n\tat org.apache.spark.sql.DataFrame$$anonfun$resolve$1.apply(DataFrame.scala:159)\n\tat scala.Option.getOrElse(Option.scala:120)\n\tat org.apache.spark.sql.DataFrame.resolve(DataFrame.scala:158)\n\tat org.apache.spark.sql.DataFrameNaFunctions$$anonfun$fill0$1.apply(DataFrameNaFunctions.scala:364)\n\tat org.apache.spark.sql.DataFrameNaFunctions$$anonfun$fill0$1.apply(DataFrameNaFunctions.scala:362)\n\tat scala.collection.mutable.ResizableArray$class.foreach(ResizableArray.scala:59)\n\tat scala.collection.mutable.ArrayBuffer.foreach(ArrayBuffer.scala:47)\n\tat org.apache.spark.sql.DataFrameNaFunctions.fill0(DataFrameNaFunctions.scala:362)\n\tat org.apache.spark.sql.DataFrameNaFunctions.fill(DataFrameNaFunctions.scala:210)\n\tat sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)\n\tat sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)\n\tat sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)\n\tat java.lang.reflect.Method.invoke(Method.java:497)\n\tat py4j.reflection.MethodInvoker.invoke(MethodInvoker.java:231)\n\tat py4j.reflection.ReflectionEngine.invoke(ReflectionEngine.java:379)\n\tat py4j.Gateway.invoke(Gateway.java:259)\n\tat py4j.commands.AbstractCommand.invokeMethod(AbstractCommand.java:133)\n\tat py4j.commands.CallCommand.execute(CallCommand.java:79)\n\tat py4j.GatewayConnection.run(GatewayConnection.java:207)\n\tat java.lang.Thread.run(Thread.java:745)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# adding a field to a dataframe\n",
+    "from uuid import uuid1\n",
+    "\n",
+    "df.fillna({\"timestamp\":str(uuid1())}).collect()"
    ]
   },
   {
@@ -1233,8 +1400,17 @@
    },
    "outputs": [],
    "source": [
-    "# create table movie_stream_ratings ( movie_id int, ts timeuuid, avg float, c int, primary key (movie_id, ts) );"
+    "# create table movie_stream_ratings ( movie_id int, ts float, avg float, c int, primary key (movie_id, ts) );"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
