updated problems and solutions with more intermediate steps between the basic filter and the advanced query

--- a/exercises-problems.ipynb
+++ b/exercises-problems.ipynb
@@ -162,9 +162,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "When you only want to see specific fields in a DataFrame, you will use the `select()` method.  For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "user.select(user.age)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sometimes you'll want to use a different name for a field than is in the original DataFrame.  For that, you'll want to know about `.alias()`.  For instance:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "user.select(user.name, user.age.alias(\"years\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When you have a pipeline of DataFrame queries, and need to do a filter, you'll need to either temporarily assign the intermediate DataFrames to a variable or you'll need to use the SQL syntax.  For instance:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "user.select(user.name, user.age.alias(\"years\")).filter(\"years > 10\").collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tmp = user.select(user.name, user.age.alias(\"years\"))\n",
+    "tmp[tmp.years > 10].collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When working with DataFrames you'll frequently need access to some convenience functions.  For instance, `explode()` is use when you're working with sets and lists.  It creates 1 row per item in the set. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import explode\n",
+    "user.select(explode(user.favorite_foods)).collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "When you refer to `user.age`, you're looking at a `Column`.  The api for `Column is here: http://spark.apache.org/docs/latest/api/python/pyspark.sql.html#pyspark.sql.Column\n",
     "\n",
-    "**Advanced Query:** Try selecting the users who have the favorite food \"Bacon\""
+    "**Advanced Query:** Try selecting the users who have the favorite food \"Bacon\".  You'll need to use `explode()` and `alias()`."
    ]
   },
   {
@@ -290,7 +375,7 @@
    },
    "outputs": [],
    "source": [
-    "ratings_rdd = sc.textFile(\"ml-10M100K/ratings-subset.dat\").map(lambda x: x.split(\"::\") )\n",
+    "ratings_rdd = sc.textFile(\"ml-10M100K/ratings.subset.dat\").map(lambda x: x.split(\"::\") )\n",
     "ratings = ratings_rdd.toDF([\"user_id\", \"movie_id\", \"rating\", \"timestamp\"])"
    ]
   },
