--- a/exercises-solutions.ipynb
+++ b/exercises-solutions.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -78,7 +78,7 @@
        " Row(user_id=3, age=108, favorite_foods=[u'Muffins', u'Pie', u'Steak'], name=u'Patrick')]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -228,6 +228,84 @@
    ],
    "source": [
     "user.filter(\"age > 100 or name = 'Larry'\").collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[name: string, years: int]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user.select(user.name, user.age.alias(\"years\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(name=u'Jon', years=34),\n",
+       " Row(name=u'Dani', years=22),\n",
+       " Row(name=u'Patrick', years=108)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user.select(user.name, user.age.alias(\"years\")).filter(\"years > 10\").collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(_c0=u'Anger'),\n",
+       " Row(_c0=u'Bacon'),\n",
+       " Row(_c0=u'Cheese'),\n",
+       " Row(_c0=u'Kale'),\n",
+       " Row(_c0=u'Pizza'),\n",
+       " Row(_c0=u'Wine'),\n",
+       " Row(_c0=u'Candy'),\n",
+       " Row(_c0=u'Fear'),\n",
+       " Row(_c0=u'Muffins'),\n",
+       " Row(_c0=u'Pie'),\n",
+       " Row(_c0=u'Steak')]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user.select(explode(user.favorite_foods)).collect()"
    ]
   },
   {
