making selecting a dedicated section

--- a/exercises-problems.ipynb
+++ b/exercises-problems.ipynb
@@ -162,6 +162,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Selecting specific columns\n",
+    "\n",
     "When you only want to see specific fields in a DataFrame, you will use the `select()` method.  For example:"
    ]
   },
