tweaked wording of bacon selection

--- a/exercises-problems.ipynb
+++ b/exercises-problems.ipynb
@@ -249,9 +249,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When you refer to `user.age`, you're looking at a `Column`.  The api for `Column is here: http://spark.apache.org/docs/latest/api/python/pyspark.sql.html#pyspark.sql.Column\n",
+    "Tip: When you refer to `user.age`, you're looking at a `Column`.  The api for `Column is here: http://spark.apache.org/docs/latest/api/python/pyspark.sql.html#pyspark.sql.Column\n",
     "\n",
-    "**Advanced Query:** Try selecting the users who have the favorite food \"Bacon\".  You'll need to use `explode()` and `alias()`."
+    "**Advanced Query:** Try selecting the users who have the favorite food \"Bacon\".  You'll need to use `explode()`, `alias()` and a filter."
    ]
   },
   {
