moved the ugly RDD code to external file

--- a/exercises-problems.ipynb
+++ b/exercises-problems.ipynb
@@ -189,7 +189,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -243,6 +243,24 @@
    "source": [
     "from pyspark.sql.functions import explode\n",
     "user.select(explode(user.favorite_foods)).collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For queries like the above, it's useful to use our alias command:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "user.select(explode(user.favorite_foods).alias(\"food\")).collect()"
    ]
   },
   {
@@ -355,11 +373,12 @@
    },
    "outputs": [],
    "source": [
-    "movies = sc.textFile(\"ml-10M100K/movies.dat\").map(lambda x: x.split(\"::\") )\n",
-    "movies = movies.map(lambda (x,y,z): (x,y,z.split(\"|\")))\n",
-    "movies = movies.toDF([\"movie_id\", \"name\", \"tags\"])\n",
-    "writer(movies, \"movie\")\n",
-    "movies.head(10)"
+    "from load_data import load_movies, load_ratings\n",
+    "movies = load_movies(sc, writer)\n",
+    "ratings = load_ratings(sc, writer)\n",
+    "\n",
+    "movies.show()\n",
+    "ratings.show()"
    ]
   },
   {
@@ -377,8 +396,7 @@
    },
    "outputs": [],
    "source": [
-    "ratings_rdd = sc.textFile(\"ml-10M100K/ratings.subset.dat\").map(lambda x: x.split(\"::\") )\n",
-    "ratings = ratings_rdd.toDF([\"user_id\", \"movie_id\", \"rating\", \"timestamp\"])"
+    "ratings = load_ratings()"
    ]
   },
   {
