--- a/exercises-problems.ipynb
+++ b/exercises-problems.ipynb
@@ -228,8 +228,31 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Select Expressions\n",
+    "\n",
+    "Select expressions allow you to perform various SQL-like operations on your data, still in the JVM."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "user.selectExpr(\"age * 10 as old_age\").collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Convenience functions\n",
     "When working with DataFrames you'll frequently need access to some convenience functions.  For instance, `explode()` is use when you're working with sets and lists.  It creates 1 row per item in the set. "
    ]
   },
@@ -271,15 +294,6 @@
     "\n",
     "**Advanced Query:** Try selecting the users who have the favorite food \"Bacon\".  You'll need to use `explode()`, `alias()` and a filter."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
