added note about spark context and printed useful stuff

--- a/exercises-problems.ipynb
+++ b/exercises-problems.ipynb
@@ -17,6 +17,24 @@
     "\n",
     "We can execute spark commands in here directly and get immediate results.\n",
     "\n",
+    "When you open up a notebook with `pys`, you automatically have a variable, `sc`, available.  This is a Spark Context.  It's our starting point for all Spark operations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print sc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We're going to be using Python with DataFrames, which is only available in Spark 1.3 or later.  We're going to be using a recent version of open source spark.  To use it, you'll have to import the `SQLContext`."
    ]
   },
@@ -24,12 +42,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "from pyspark.sql import SQLContext\n",
-    "sql = SQLContext(sc)"
+    "sql = SQLContext(sc)\n",
+    "print sql"
    ]
   },
   {
@@ -48,7 +67,8 @@
    "outputs": [],
    "source": [
     "user = sql.read.format(\"org.apache.spark.sql.cassandra\").\\\n",
-    "               load(keyspace=\"training\", table=\"user\")"
+    "               load(keyspace=\"training\", table=\"user\")\n",
+    "print user"
    ]
   },
   {
